--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
       SERVER_BASE_URL: ${SERVER_BASE_URL}
+      FRONTEND_BASE_URL: ${FRONTEND_BASE_URL}
       FRONTEND_VERIFY_URL: ${FRONTEND_VERIFY_URL}
       FRONTEND_RESET_URL: ${FRONTEND_RESET_URL}
       FRONTEND_INVITE_URL: ${FRONTEND_INVITE_URL}
