--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.1.5",
@@ -33,6 +34,7 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.5",
     "next-themes": "^0.4.6",
+    "popover": "^2.4.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.6",
     "react-dom": "^19.0.0",
