--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,6 @@ services:
     build: ./backend
     container_name: taskflow-backend
     restart: always
-    depends_on:
-      db:
-        condition: service_healthy
     ports:
       - "8080:8080"
     environment:
@@ -30,7 +27,8 @@ services:
       FRONTEND_VERIFY_URL: ${FRONTEND_VERIFY_URL}
       FRONTEND_RESET_URL: ${FRONTEND_RESET_URL}
       FRONTEND_INVITE_URL: ${FRONTEND_INVITE_URL}
-
+    env_file:
+      - ./.env
   frontend:
     build:
       context: ./frontend
@@ -50,6 +48,8 @@ services:
       - ./frontend:/app
       - /app/node_modules
       - /app/.next
+    env_file:
+      - ./.env
 
 volumes:
   db-data:
