--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,28 @@
-version: '3.8'
-
 services:
-  # 백엔드 서비스
   backend:
     build: ./backend
-    container_name: taskflow-backend
-    restart: always
     ports:
       - "8080:8080"
     environment:
-      SPRING_PROFILES_ACTIVE: prod
-      DB_HOST: db
-      DB_PORT: 3306
-      DB_NAME: ${DB_NAME}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      SPRING_JPA_HIBERNATE_DDLAUTO: ${SPRING_JPA_HIBERNATE_DDLAUTO}
-      JWT_SECRET: ${JWT_SECRET}
-      ENCRYPTION_SECRET_KEY: ${ENCRYPTION_SECRET_KEY}
-      MAIL_USERNAME: ${MAIL_USERNAME}
-      MAIL_PASSWORD: ${MAIL_PASSWORD}
-      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
-      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
-      SERVER_BASE_URL: ${SERVER_BASE_URL}
-      FRONTEND_BASE_URL: ${FRONTEND_BASE_URL}
-      FRONTEND_VERIFY_URL: ${FRONTEND_VERIFY_URL}
-      FRONTEND_RESET_URL: ${FRONTEND_RESET_URL}
-      FRONTEND_INVITE_URL: ${FRONTEND_INVITE_URL}
-    env_file:
-      - ./.env
-  frontend:
-    build:
-      context: ./frontend
-      args:
-        - NEXT_PUBLIC_GOOGLE_CLIENT_ID=${NEXT_PUBLIC_GOOGLE_CLIENT_ID}
-        - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
-    container_name: taskflow-frontend
-    restart: always
-    depends_on:
-      - backend
-    ports:
-      - "3000:3000"
-    environment:
-      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
-      NEXT_PUBLIC_GOOGLE_CLIENT_ID: ${NEXT_PUBLIC_GOOGLE_CLIENT_ID}
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
+      - SPRING_PROFILES_ACTIVE=prod
     env_file:
       - ./.env
 
-volumes:
-  db-data:
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    env_file:
+      - ./.env
+    depends_on:
+      - backend
+
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - backend
