--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,75 @@
+version: '3.8'
+
 services:
+  db:
+    image: mysql:8.0
+    container_name: taskflow-db
+    restart: always
+    environment:
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+    ports:
+      - "3307:3306"
+    volumes:
+      - db-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
+  # 백엔드 서비스
   backend:
     build: ./backend
+    container_name: taskflow-backend
+    restart: always
+    depends_on:
+      db:
+        condition: service_healthy
     ports:
       - "8080:8080"
     environment:
-      - SPRING_PROFILES_ACTIVE=prod
-    env_file:
-      - ./.env
+      SPRING_PROFILES_ACTIVE: prod
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      SPRING_JPA_HIBERNATE_DDLAUTO: ${SPRING_JPA_HIBERNATE_DDLAUTO}
+      JWT_SECRET: ${JWT_SECRET}
+      ENCRYPTION_SECRET_KEY: ${ENCRYPTION_SECRET_KEY}
+      MAIL_USERNAME: ${MAIL_USERNAME}
+      MAIL_PASSWORD: ${MAIL_PASSWORD}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
+      SERVER_BASE_URL: ${SERVER_BASE_URL}
+      FRONTEND_BASE_URL: ${FRONTEND_BASE_URL}
+      FRONTEND_VERIFY_URL: ${FRONTEND_VERIFY_URL}
+      FRONTEND_RESET_URL: ${FRONTEND_RESET_URL}
+      FRONTEND_INVITE_URL: ${FRONTEND_INVITE_URL}
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        - NEXT_PUBLIC_GOOGLE_CLIENT_ID=${NEXT_PUBLIC_GOOGLE_CLIENT_ID}
+        - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
+    container_name: taskflow-frontend
+    restart: always
+    depends_on:
+      - backend
     ports:
       - "3000:3000"
-    env_file:
-      - ./.env
-    depends_on:
-      - backend
-
-  nginx:
-    image: nginx:stable-alpine
-    ports:
-      - "80:80"
+    environment:
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
+      NEXT_PUBLIC_GOOGLE_CLIENT_ID: ${NEXT_PUBLIC_GOOGLE_CLIENT_ID}
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - frontend
-      - backend
+      - ./frontend:/app
+      - /app/node_modules
+      - /app/.next
+
+volumes:
+  db-data:
