--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "3307:3306"
     volumes:
       - db-data:/var/lib/mysql
+    command: --default-time-zone=Asia/Seoul
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD}"]
       interval: 10s
@@ -32,6 +33,7 @@ services:
       - "8080:8080"
     environment:
       SPRING_PROFILES_ACTIVE: prod
+      JAVA_OPTS: "-Duser.timezone=Asia/Seoul"
       DB_HOST: db
       DB_PORT: 3306
       DB_NAME: ${DB_NAME}
