--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,19 @@
 FROM openjdk:17-jdk-slim as builder
+
 WORKDIR /workspace/app
 
 COPY gradlew .
 COPY gradle gradle
-COPY build.gradle.kts .
-COPY settings.gradle.kts .
+COPY build.gradle .
+COPY settings.gradle .
 
 COPY src src
 
 RUN chmod +x ./gradlew
 RUN ./gradlew build -x test
 
-FROM openjdk:17-slim
 
-ENV TZ Asia/Seoul
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+FROM openjdk:17-slim
 
 WORKDIR /app
 
@@ -22,4 +21,4 @@ COPY --from=builder /workspace/app/build/libs/*.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-Duser.timezone=Asia/Seoul", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-Duser.timezone=Asia/Seoul", "-jar", "app.jar"]
